fix: improve header spacing

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -57,8 +57,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     color: var(--header);
-    margin-top: 1.5em;
-    line-height: 1.1;
+    margin-top: 1.8em;
+    line-height: 1;
 }
 
 a {
